# data_squirrel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: data_store.rs  lib.rs
src/data_store/: errors.rs  inclusion_rules.rs  mod.rs  scan_event.rs  scan_result.rs  sync_conflict_event.rs  synchronization_messages.rs  tests.rs
src/fs_interaction/: errors.rs  mod.rs  relative_path.rs  tests.rs
src/fs_interaction/virtual_fs/: in_memory_fs.rs  mod.rs  wrapper_fs.rs
src/metadata_db/: data_item.rs  data_set.rs  data_store.rs  db_inclusion_rule.rs  db_item.rs  errors.rs  item.rs  metadata.rs  mod.rs  mod_time.rs  owner_information.rs  queries.rs  schema.rs  tests.rs
src/metadata_db/db_migration/: errors.rs  mod.rs  tests.rs  version_001.rs  version_002.rs
src/metadata_db/entity/: data_item.rs  data_set.rs  data_store.rs  file_system_metadata.rs  file_type_enum.rs  inclusion_rule.rs  item.rs  metadata.rs  mod.rs  mod_metadata.rs  mod_time.rs  owner_information.rs  path_component.rs  sync_time.rs
src/metadata_store/: mod.rs
src/metadata_store/db_migration/: mod.rs  version_001.rs
src/version_vector/: mod.rs  version_peer.rs
tests/: lib.rs
