[package]
name = "data_squirrel"
version = "0.1.0"
authors = ["Fritz Florian <flo.fritz@t-online.de>"]

[dependencies.rusqlite]
version = "0.24.1"
features = ["bundled", "chrono"]

[dependencies.tempfile]
version = "3"

[dependencies.filetime]
version = "0.2"

[dependencies.ring]
version = "0.16"

[dependencies.data-encoding]
version = "2.3"

[dependencies.chrono]
version = "0.4"
