[package]
name = "data_squirrel"
version = "0.1.0"
authors = ["Fritz Florian <flo.fritz@t-online.de>"]

[lib]
name = "core"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies.libsqlite3-sys]
version = ">=0.8.0, <0.19.0"
optional = true
features = ["bundled"]

[dependencies.diesel]
version = "1.4.5"
default-features = false
features = ["sqlite", "chrono"]

[dependencies.tempfile]
version = "3"

[dependencies.filetime]
version = "0.2"

[dependencies.ring]
version = "0.16"

[dependencies.data-encoding]
version = "2.3"

[dependencies.chrono]
version = "0.4"

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]

[dependencies.clap]
version = "2.33.0"
